# truk

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  Trukfile
cmake/: Findre2c.cmake
lib/core/: attribs.trk  env.trk  events.trk  packages.trk  targets.trk  types.trk
lib/source_comp/: cxx.trk
lib/std/: os.trk
truk/: CMakeLists.txt  Trukfile  basedefs.h  except.cc  except.h  except_base.cc  except_base.h  lexer.h  lexer.in.cpp  main.cc  module.h  parser.cc  parser.h  runtime.cc  runtime.h
truk/utils/: file.h
